// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ae huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 15,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              allowFontScaling={false}
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          aria-level="3"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 35,
              "includeFontPadding": false,
              "lineHeight": 35,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          allowFontScaling={false}
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          numberOfLines={5}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text
            maxFontSizeMultiplier={2}
            minimumFontScale={0.7}
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ae medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 15,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              allowFontScaling={false}
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          aria-level="3"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "includeFontPadding": false,
              "lineHeight": 30,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          allowFontScaling={false}
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          numberOfLines={5}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text
            maxFontSizeMultiplier={2}
            minimumFontScale={0.7}
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ae smallTablet 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 15,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              allowFontScaling={false}
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          aria-level="3"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "includeFontPadding": false,
              "lineHeight": 30,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          allowFontScaling={false}
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          numberOfLines={5}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text
            maxFontSizeMultiplier={2}
            minimumFontScale={0.7}
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ae wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 15,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              allowFontScaling={false}
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          aria-level="3"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "includeFontPadding": false,
              "lineHeight": 30,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          allowFontScaling={false}
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          numberOfLines={5}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text
            maxFontSizeMultiplier={2}
            minimumFontScale={0.7}
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ae without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingTop": 15,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              allowFontScaling={false}
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          aria-level="3"
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "includeFontPadding": false,
              "lineHeight": 30,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          allowFontScaling={false}
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={2}
          minimumFontScale={0.7}
          numberOfLines={5}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text
            maxFontSizeMultiplier={2}
            minimumFontScale={0.7}
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;
